# daboyi

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  QWEN.md  README.md
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: release-wasm.yml
.qwen/: settings.json
assets/: capitals.tsv  country_colors.tsv  country_names.tsv  merchandize.tsv  ownership.tsv  pops.tsv  province_names.tsv  vassals.tsv
assets/shaders/: border_material.wgsl  province_map.wgsl
client/: Cargo.toml
client/src/: armies.rs  capitals.rs  editor.rs  labels.rs  main.rs  map.rs  memory.rs  menu.rs  net.rs  state.rs  terrain.rs  web_io.rs
client/src/async_utils/: mod.rs
client/src/editor/: admin.rs  brush.rs  mod.rs  save_load.rs  spatial.rs  undo.rs
client/src/map/: borders.rs  color.rs  interact.rs  material.rs  mod.rs
client/src/ui/: egui_ui.rs  mod.rs
doc/: README.md  province-ownership-extraction.md  人口系统.md  国际化.md  地图系统.md  持久化.md  数据提取.md  架构总览.md  涂色功能实现总结.md  涂色功能设计.md  生产系统.md  编辑器使用指南.md  网络与通信.md
locales/: en.yml  zh.yml
server/: Cargo.toml
server/src/: db.rs  main.rs  ws.rs
server/src/game/: data.rs  load.rs  military.rs  mod.rs  params.rs  population.rs  production.rs
shared/: Cargo.toml
shared/src/: conv.rs  lib.rs  map.rs
tools/: convert_rivers.py  download_gadm.py  extract_rivers_vector.py  extract_translations.py  linux_release.sh  pyproject.toml
tools/download_gadm/: download_gadm.py  pyproject.toml
tools/mapgen/: Cargo.toml
tools/mapgen/src/: adjacency.rs  geo.rs  main.rs  subdivide.rs
tools/parse_save/: Cargo.toml
tools/parse_save/src/: main.rs
tools/terrain_cache/: Cargo.toml
tools/terrain_cache/src/: main.rs
web/: Trunk.toml  index.html  login.js  styles.css
