[workspace]
members = ["server", "client", "shared", "tools/mapgen", "tools/parse_save"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
