[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15"
rust-i18n = "3"
bincode = "1"
tokio-tungstenite = "0.21"
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
shared = { path = "../shared" }
