[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", features = ["webgl2"] }
bevy_egui = "0.31"
serde = { workspace = true }
serde_json = { workspace = true }
bincode = "1"
lazy_static = "1"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
shared = { path = "../shared" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.17.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "0.6"
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Blob", "Document", "Element", "Event", "File", "FileList", "HtmlAnchorElement", "HtmlElement", "HtmlInputElement", "Url", "Window"] }
