[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-ws = "0.3"
rocksdb = "0.24"
bincode = "1"
geojson = "0.24"
geo = "0.29"
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
shared = { path = "../shared" }
