[project]
name = "daboyi-tools"
version = "0.1.0"
description = "Python helper scripts for Daboyi asset generation"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2,<3",
    "pillow>=11,<12",
    "scipy>=1.16,<2",
    "scikit-image>=0.25,<0.26",
]

[dependency-groups]
gdal = [
    "gdal>=3.11,<4",
]

[tool.uv]
package = false
